add get users and test
